<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".alarm.AlarmActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_time_alarm"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <ImageButton
            android:id="@+id/btn_once_date"
            android:layout_width="50dp"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_manage"
            android:contentDescription="@string/button_once_date" />

        <TextView
            android:id="@+id/tv_once_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/alarm_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_once_time"
            android:layout_width="50dp"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_manage"
            android:contentDescription="@string/button_once_date" />

        <TextView
            android:id="@+id/tv_once_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/alarm_time"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_once_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_message"
        android:inputType="text"
        android:layout_marginBottom="8dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_set_once_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/set_alarm"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text="@string/repeating_alarm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_repeating_time"
            android:layout_width="50dp"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_manage"
            android:contentDescription="@string/button_once_date" />

        <TextView
            android:id="@+id/tv_repeating_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/alarm_time"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeating_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_message"
        android:inputType="text"
        android:layout_marginBottom="8dp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_set_repeating_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/set_repeating_alarm"/>

    <Button
        android:id="@+id/btn_cancel_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/cancel_alarm"/>

</LinearLayout>
